@@ -1,3 +1,5 @@
+- Refactor: Moved authenticationRedirector to academic core
+
 6.12.0 (28-04-2020)
 - Refactor: Upgraded dependency of fenixedu-academic-core (Shifts capacity by type)
 
